# Embedded-Rust

./: LICENSE
ESP32/: README.md
ESP32/basic/blinky/: Cargo.toml  diagram.json  wokwi.toml
ESP32/basic/blinky/src/: main.rs
ESP32/basic/button/: Cargo.toml
ESP32/basic/button-interrupt/: diagram.json
ESP32/basic/ledc/: Cargo.toml
ESP32/basic/ledc/src/: main.rs
ESP32/basic/mcpwm/: Cargo.toml
ESP32/basic/mcpwm/src/: main.rs
ESP32/button/: wokwi.toml
ESP32/button-interrupt/: Cargo.toml  wokwi.toml
ESP32/button-interrupt/src/: main.rs
ESP32/button/src/: main.rs
ESP32/examples/motor-foc/velocity-open-loop/: Cargo.toml
ESP32/examples/motor-foc/velocity-open-loop/.cargo/: config.toml
ESP32/examples/motor-foc/velocity-open-loop/src/: main.rs  motor_control.rs
ESP32/examples/motor-foc/velocity-open-loop/wokwi/: wokwi.toml
ESP32/hello-world/: Cargo.toml  wokwi.toml
ESP32/hello-world/src/: main.rs
ESP32/mcpwm/: Cargo.toml
ESP32/mcpwm/src/: main.rs
STM32/blinky/: Cargo.toml
STM32/blinky/scripts/: run.cmd
STM32/blinky/src/: main.rs
