[package]
name = "blinky"
version = "0.1.0"
authors = ["Stark Shang <stark.shang@outlook.com>"]
edition = "2021"
license = "MIT"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
embedded-hal = "1.0.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = [ "rt", "stm32f103", "medium" ]