[package]
name = "blinky"
version = "0.1.0"
authors = ["Stark Shang <stark.shang@outlook.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "0.18.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.12.1", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32c3", "uart"] }
