[package]
name = "button"
version = "0.1.0"
authors = ["Stark Shang <stark.shang@outlook.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "0.17.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.11.1", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32c3", "uart"] }
