[package]
name = "mcpwm"
version = "0.1.0"
authors = ["Stark Shang <stark.shang@outlook.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "0.22.0", features = ["esp32"] }
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32"] }
critical-section = "1.1.2"
